--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@types/react-dom": "^18.3.0",
     "astro": "^4.12.2",
     "framer-motion": "^11.3.8",
+    "i18next": "^23.12.2",
+    "i18next-http-backend": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.0",
     "react-icons": "^5.2.1",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3"
