--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.0",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.25.1",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3"
   }
