--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.8.2",
     "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@emailjs/browser": "^4.4.1",
     "@fontsource/onest": "^5.0.4",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@nextui-org/react": "^2.4.6",
